--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "16.11.7",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@urbit/vite-plugin-urbit": "0.8.0",
