--- a/ui/package.json
+++ b/ui/package.json
@@ -10,9 +10,13 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "ethers": "5.7.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.0",
     "@urbit/api": "2.0.0",
     "@urbit/http-api": "2.0.0",
+    "ethers": "5.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
